# mobile-profiler

./: .gitignore  README.md  build-portable.bat  pyproject.toml  start-ui.bat
docs/: android-automation-engine-benchmark.md  architecture.md  automation-kernel.md  deterministic-visual-spike.md  two-hour-agent-automation.md  two-stage-android-campaign.md  usage-zh.md
examples/: android-github-game-candidates.json  android-three-engine-game-benchmark.json  android-two-stage-campaign.json  btr2-log-rules.json  deterministic-visual-spike.json
src/android_power_profiler/: __init__.py  analysis.py  cli.py  collector.py  log_import.py  models.py  parsers.py  report.py  storage.py
src/mobile_power_profiler/: analysis.py  cli.py  collector.py  comparison.py  evidence.py  features.py  harmony.py  ios.py  ios_bridge.py  models.py  parsers.py  report.py  storage.py  ui.py
src/mobile_power_profiler/web/: app.css  app.js  index.html
src/mobile_profiler/: __init__.py  adb_agent.py  adb_agent_prompts.py  analysis.py  campaign.py  campaign_config.py  campaign_controller.py  cli.py  collector.py  comparison.py  evidence.py  features.py  harmony.py  ios.py  ios_bridge.py  maaend_runtime.py  messages.py  models.py  open_source_automation.py  parsers.py  report.py  star_rail_asu_runner.py  star_rail_bridge.py  star_rail_runtime.py  storage.py  ui.py
src/mobile_profiler/automation/: __init__.py  contracts.py  image_matching.py  ports.py  registry.py  scenario.py  screen_graph.py  state.py  uiautomator2_provider.py
src/mobile_profiler/web/: app.css  app.js  index.html
tests/: test_adb_agent.py  test_automation.py  test_campaign.py  test_deterministic_visual.py  test_maaend_runtime.py  test_open_source_automation.py  test_profiler.py  test_star_rail_bridge.py  test_ui.py
tools/: build-portable.ps1  deterministic-visual-demo.py
tools/android-icon-helper/: IconDump.java
