[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-power-profiler"
version = "0.7.1"
description = "Standalone Android, HarmonyOS, and iOS battery and resource profiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mobile-power-profiler = "mobile_power_profiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mobile_power_profiler = ["web/*.html", "web/*.css", "web/*.js"]
