[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-profiler"
version = "0.7.1"
description = "Standalone Android, HarmonyOS, and iOS power and performance profiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mobile-profiler = "mobile_power_profiler.cli:main"
mobile-power-profiler = "mobile_power_profiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mobile_power_profiler = ["web/*.html", "web/*.css", "web/*.js"]
