[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-profiler"
version = "1.0.0"
description = "Standalone Android, HarmonyOS, and iOS power and performance profiler"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
uiautomator2 = ["uiautomator2>=3.4,<4"]
image = [
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.10,<5",
]

[project.scripts]
mobile-profiler = "mobile_profiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mobile_profiler = ["web/*.html", "web/*.css", "web/*.js", "assets/*.jar"]
